%%{init: {
  'theme': 'base',
  'themeVariables': {
    'primaryColor': '#e0f2fe',
    'primaryTextColor': '#000000',
    'primaryBorderColor': '#1e293b',
    'lineColor': '#1e293b',
    'secondaryColor': '#fef3c7',
    'tertiaryColor': '#ffffff',
    'edgeLabelBackground':'#ffffff',
    'fontFamily': 'Segoe UI, Arial, sans-serif'
  }
}}%%
stateDiagram-v2
    direction TB

    [*] --> PENDING : 1. Khởi tạo đơn hàng mới

    state "CHỜ THANH TOÁN (PENDING)<br>Hạn thanh toán 15 phút" as PENDING
    state "THANH TOÁN THẤT BẠI (PAYMENT_FAILED)<br>Chờ thử lại hoặc hủy đơn" as PAYMENT_FAILED
    state "ĐÃ THANH TOÁN (PAID)<br>Chờ quầy bar tiếp nhận" as PAID
    state "ĐANG PHA CHẾ (PREPARING)<br>Nhân viên đang làm món" as PREPARING
    state "SẴN SÀNG NHẬN (READY)<br>Đã pha xong, mời khách nhận" as READY
    state "HOÀN TẤT (COMPLETED)<br>Đã bàn giao cho khách" as COMPLETED
    state "ĐÃ HỦY (CANCELLED)<br>Đã hoàn trả số lượng kho" as CANCELLED

    %% Luồng chuyển tiếp chuẩn (Happy Path)
    PENDING --> PAID : 2. Thanh toán thành công
    PAID --> PREPARING : 3. Nhân viên bắt đầu pha chế
    PREPARING --> READY : 4. Pha chế hoàn tất
    READY --> COMPLETED : 5. Bàn giao đồ uống cho khách
    COMPLETED --> [*] : Hoàn thành chu trình đơn hàng

    %% Nhánh xử lý lỗi thanh toán
    PENDING --> PAYMENT_FAILED : Giao dịch thanh toán không thành công
    PAYMENT_FAILED --> PENDING : Khách hàng bấm thử lại thanh toán

    %% Nhánh hủy đơn và hoàn trả kho
    PENDING --> CANCELLED : Khách hủy đơn / Quá hạn thanh toán 15 phút
    PAYMENT_FAILED --> CANCELLED : Khách hàng hoặc nhân viên hủy đơn lỗi
    PAID --> CANCELLED : Nhân viên hủy do sự cố tại quầy
    CANCELLED --> [*] : Kết thúc chu trình hủy đơn

    classDef successState fill:#dcfce7,stroke:#1e293b,color:#000000,stroke-width:2px;
    classDef failedState fill:#fee2e2,stroke:#1e293b,color:#000000,stroke-width:2px;
    classDef cancelState fill:#f1f5f9,stroke:#1e293b,color:#000000,stroke-width:2px;
    classDef activeState fill:#e0f2fe,stroke:#1e293b,color:#000000,stroke-width:2px;

    class PENDING,PAID,PREPARING,READY activeState;
    class COMPLETED successState;
    class PAYMENT_FAILED failedState;
    class CANCELLED cancelState;
